--- a/index.html
+++ b/index.html
@@ -59,19 +59,19 @@
           </div>
           <div class="s-two-products">
             <div class="product product-one">
-              <h3 class="price pos-abs-center">7</h3>
+              <h3 class="price pos-abs-center">7₹</h3>
               <img src="https://raw.githubusercontent.com/r-e-d-ant/eCream/master/assets/images/product1.png" alt="ice cream with honey" loading="lazy">
               <h3 class="buy-btn pos-abs-center">BUY</h3>
               <h3 class="name pos-abs-center">Ice cream <b>honey</b></h3>
             </div>
             <div class="product product-two">
-              <h3 class="price pos-abs-center">5</h3>
+              <h3 class="price pos-abs-center">5₹</h3>
               <img src="https://raw.githubusercontent.com/r-e-d-ant/eCream/master/assets/images/product2.jpg" alt="ice cream with honey" loading="lazy">
               <h3 class="buy-btn pos-abs-center">BUY</h3>
               <h3 class="name pos-abs-center">Choco <b>delight</b></h3>
             </div>
             <div class="product product-three">
-              <h3 class="price pos-abs-center">15</h3>
+              <h3 class="price pos-abs-center">15₹</h3>
               <img src="https://raw.githubusercontent.com/r-e-d-ant/eCream/master/assets/images/product3.png" alt="ice cream with honey" loading="lazy">
               <h3 class="buy-btn pos-abs-center">BUY</h3>
               <h3 class="name pos-abs-center">Carnival <b>strawberry</b></h3>
@@ -85,7 +85,7 @@
           <div class="s-three-lower-container">
             <h3 class="s-three-title">Stress out? Try eating our ice cream.</h3>
             <p class="s-three-desc s-definition">Flash-frozen at -200 °C (-328 °F), the mixture of rich cream, natural flavors, and custom mix-ins transforms instantly, resulting in a luxuriously smooth texture and an unforgettable frozen delight."</p>
-            <span class="s-three-price">12</span>
+            <span class="s-three-price">12₹</span>
             <button class="button ad-buy-btn">Buy Now</button>
           </div>
         </section>
